--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,8 +16,13 @@
   "bugs": {
     "url": "https://github.com/cyclic-software/starter-express-api/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
