--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1"
   },
   "devDependencies": {
