--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
